added as much as I could